[package]
name              = "exo-crypto-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description       = "Exo-OS server: crypto_server (bare-metal no_std)"

[[bin]]
name = "exo-crypto-server"
path = "src/main.rs"

[dependencies]
spin.workspace = true

# Crypto — crates RustCrypto validées IETF (pas d'implémentation from-scratch)
# RÈGLE SRV-CRYPTO-01 : toutes les primitives crypto via crates, jamais from-scratch.
blake3.workspace           = true   # Hash BLAKE3 (mode keyed + derive_key)
chacha20poly1305.workspace = true   # XChaCha20-Poly1305 AEAD (Ring 1 userspace uniquement)
ed25519-dalek.workspace    = true   # Signatures Ed25519
x25519-dalek.workspace     = true   # ECDH X25519
hkdf.workspace             = true   # HKDF (Key derivation)
