[package]
name              = "exo-device-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description       = "Exo-OS server: device_server (bare-metal no_std)"

[[bin]]
name = "exo-device-server"
path = "src/main.rs"
test = false
bench = false

[dependencies]
spin.workspace = true
exo-syscall-abi = { path = "../syscall_abi" }
