[package]
name              = "exo-exo-shield"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description       = "Exo-OS server: exo_shield (bare-metal no_std)"

[[bin]]
name = "exo-exo-shield"
path = "src/main.rs"

[dependencies]
spin.workspace = true
