[package]
name              = "exo-shield"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description       = "Exo-OS server: exo_shield (bare-metal no_std)"

[[bin]]
name = "exo-shield"
path = "src/main.rs"
test = false
bench = false

[dependencies]
spin.workspace = true
exo-syscall-abi = { path = "../syscall_abi" }
