[package]
name              = "exo-init-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description       = "Exo-OS server: init_server (bare-metal no_std)"

[[bin]]
name = "exo-init-server"
path = "src/main.rs"

[dependencies]
spin.workspace = true
