[package]
name              = "exo-init-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description       = "Exo-OS server: init_server (bare-metal no_std)"

[[bin]]
name = "exo-init-server"
path = "src/main.rs"
test = false
bench = false

[dependencies]
spin.workspace = true
exo-syscall-abi = { path = "../syscall_abi" }
exo-phoenix-ssr = { path = "../../libs/exo-phoenix-ssr" }
