[package]
name              = "exo-input-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description       = "Exo-OS server: input event broker (bare-metal no_std)"

[[bin]]
name = "exo-input-server"
path = "src/main.rs"
test = false
bench = false

[dependencies]
exo-syscall-abi = { path = "../syscall_abi" }
