[package]
name              = "exo-ipc-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description       = "Exo-OS server: ipc_router (bare-metal no_std)"

[[bin]]
name = "exo-ipc-router"
path = "src/main.rs"

[dependencies]
spin.workspace = true
exo-syscall-abi = { path = "../syscall_abi" }
