[package]
name              = "exo-memory-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description       = "Exo-OS server: memory_server (bare-metal no_std)"

[[bin]]
name = "exo-memory-server"
path = "src/main.rs"

[dependencies]
spin.workspace = true
