[package]
name              = "exo-network-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description       = "Exo-OS server: network_server (bare-metal no_std)"

[[bin]]
name = "exo-network-server"
path = "src/main.rs"
test = false
bench = false
required-features = ["baremetal-bin"]

[features]
default = ["baremetal-bin"]
baremetal-bin = []

[dependencies]
spin.workspace = true
smoltcp.workspace = true
exo-syscall-abi = { path = "../syscall_abi" }
